--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.show-sql=true
 # Config mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hacker247.net@gmail.com
-spring.mail.password=qnmqatbswbefuevg
+spring.mail.username=email
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
